# mcbot

./: .gitignore  README.md  TODO.md  config.sample.yaml  pyproject.toml
.github/workflows/: publish.yml
examples/: simple.py
mcbot/: __init__.py  client.py  const.py  settings.py
mcbot/helpers/: letsmesh.py  sqlite.py
mcbot/helpers/coordinator/: client.py  scoring.py
mcbot/models/internal/: command.py  context.py  extension.py  packet.py  task.py  triggers.py
mcbot/models/internal/commands/: __init__.py  chat.py  prefixed.py
mcbot/node/: dispatcher.py  node.py
mcbot/utils/: board_configs.py  identity.py  radio.py
