[project]
name = "mcbot"
description = "A Meshcore bot framework for Raspberry Pi hats"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
license = "MIT"
authors = [{ name = "zevaryx", email = "zevaryx@gmail.com" }]
maintainers = [{ name = "zevaryx", email = "zevaryx@gmail.com" }]
keywords = ["meshcore", "Raspberry Pi", "lora"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "croniter>=6.2.2",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymc-core[hardware]@git+https://github.com/rightup/pyMC_core.git@feat/companion",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/zevaryx/mcbot"
Repository = "https://github.com/zevaryx/mcbot.git"
Issues = "https://github.com/zevaryx/mcbot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "mcbot/const.py"

[tool.hatch.metadata]
allow-direct-references = true
